Finish courses section HTML

--- a/index.html
+++ b/index.html
@@ -14,6 +14,125 @@
 </head>
 
 <body>
+    <header>
+        <div class="wrapper">
+            <nav>
+                <div class="logo">GD.</div>
+                <ul>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Services</a></li>
+                    <li><a href="#">Our Work</a></li>
+                    <li><a href="#" class="btn dark">Enrol Now</a></li>
+                </ul>
+            </nav>
+
+            <!-- End Of Desktop Nav menu -->
+
+            <div class="hero-section">
+                <div class="left">
+                    <h1>Learn the art of <br> Game Dev</h1>
+                    <p>This is a comprehensive course on Game Development. You will learn everything from generating an
+                        idea to publishing your games to different platforms.</p>
+                    <a href="#" class="btn light">Enrol Now</a>
+                </div>
+                <div class="right">
+                    <img src="images/hero-image.png" alt="">
+                </div>
+                <div class="achievment-cards">
+                    <div class="achievment-card students-enrolled">
+                        <div class="content">
+                            <div>
+                                <h3>32K</h3>
+                            </div>
+                            <p>Students Enrolled</p>
+                        </div>
+                        <div class="bg">
+
+                        </div>
+                    </div>
+
+                    <div class="achievment-card overall-rating">
+                        <div class="content">
+                            <div>
+                                <h3>4.7</h3>
+                                <img src="/images/star-icon.svg" alt="">
+                            </div>
+                            <p>Overall Rating</p>
+                        </div>
+                        <div class="bg">
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+
+    <!-- End of header Section -->
+
+    <div class="wrapper">
+        <section class="testimonials-section">
+            <div class="left">
+                <div class="testimonial-card">
+                    <div class="content">
+                        This is a great course. It helped me a lot. Thank you :)
+                    </div>
+                    <div class="info">
+                        <h4>Jane Cooper</h4>
+                        <p class="company">Developer, Sony</p>
+                    </div>
+                    <img src="/images/student-1.png" alt="">
+                </div>
+                <div class="testimonial-card">
+                    <div class="content">
+                        Amazing Work! Well done!
+                    </div>
+                    <div class="info">
+                        <h4>Jacob Jones</h4>
+                        <p class="company">Designer, Facebook</p>
+                    </div>
+                    <img src="/images/student-2.png" alt="">
+                </div>
+            </div>
+            <div class="right">
+                <h2>What Our Students say</h2>
+                <p>All students get access to all the videos and also the source code of the projects.</p>
+                <p>You will also have access to a private Discord channel where you can discuss your doubts.</p>
+            </div>
+            <a href="#" class="btn light">Learn More</a>
+        </section>
+    </div>
+
+    <!-- End Of testimonial Section -->
+
+    <section class="courses-section">
+        <div class="wrapper">
+            <h2 class="light">Our Courses</h2>
+            <div class="course-cards">
+                <div class="course-card">
+                    <img src="/images/course-1.png" alt="">
+                    <div class="info">
+                        <h3>Game Design Essentials</h3>
+                    </div>
+                    <div class="duration">
+                        8 HRS
+                    </div>
+                </div>
+            </div>
+            <div class="course-cards">
+                <div class="course-card">
+                    <img src="/images/course-2.png" alt="">
+                    <div class="info">
+                        <h3>Unity Game Engine Fundamentals</h3>
+                    </div>
+                    <div class="duration">
+                        15 HRS
+                    </div>
+                </div>
+            </div>
+        </div>
+        <a href="#" class="btn light">All Courses</a>
+    </section>
 
 
     <script src="main.js"></script>
