--- a/index.html
+++ b/index.html
@@ -134,6 +134,26 @@
         <a href="#" class="btn light">All Courses</a>
     </section>
 
+    <!-- End of Courses Section -->
+
+    <div class="wrapper">
+        <section class="app-section">
+            <h2>Get Our App</h2>
+            <p>You can use our App for better experience on smartphones</p>
+        </section>
+        <div class="app-buttons">
+            <div class="app-btn">
+                <img src="/images/appstore-icon.svg" alt="">
+                <span>App Store</span>
+            </div>
+            <div class="app-btn">
+                <img src="/images/googleplay-icon.svg" alt="">
+                <span>Google Play</span>
+            </div>
+        </div>
+    </div>
+    <!-- End Of App Section -->
+
 
     <script src="main.js"></script>
 </body>
