Finish making HTML Structure

--- a/index.html
+++ b/index.html
@@ -154,6 +154,47 @@
     </div>
     <!-- End Of App Section -->
 
+    <div class="wrapper">
+        <div class="links-container">
+            <div class="links">
+                <h3>Quick Links</h3>
+                <ul>
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Contact Us</a></li>
+                    <li><a href="#">Privacy Policy</a></li>
+                    <li><a href="#">Terms & Conditions</a></li>
+                </ul>
+            </div>
+            <div class="links">
+                <h3>Course</h3>
+                <ul>
+                    <li><a href="#">Log In</a></li>
+                    <li><a href="#">Download</a></li>
+                    <li><a href="#">All Courses</a></li>
+                </ul>
+            </div>
+            <div class="links">
+                <h3>Contact Us</h3>
+                <ul>
+                    <li>contact@email.com</li>
+                </ul>
+                <div class="social">
+                    <a href="#">
+                        <img src="/images/facebook-icon.svg" alt="">
+                    </a>
+                    <a href="#">
+                        <img src="/images/instagram-icon.svg" alt="">
+                    </a>
+                </div>
+                <form action="#">
+                    <input type="text" placeholder="Email Address">
+                    <button class="submit-btn">Subscribe</button>
+                </form>
+            </div>
+        </div>
+        <p class="copyright">This website is developed by GTCoding © 2021</p>
+    </div>
+
 
     <script src="main.js"></script>
 </body>
