Start styling Testimonial Section

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 <body>
     <header>
         <div class="wrapper">
+
+            <!-- Start Of Navbar Section -->
             <nav>
                 <div class="logo">GD.</div>
                 <ul>
@@ -28,6 +30,8 @@
 
             <!-- End Of Desktop Nav menu -->
 
+
+            <!-- Start Of Hero Section -->
             <div class="hero-section">
                 <div class="left">
                     <h1>Learn the art of <br> Game Dev</h1>
@@ -67,9 +71,10 @@
             </div>
         </div>
     </header>
-
     <!-- End of header Section -->
 
+
+    <!-- Start of Testimonials Section -->
     <div class="wrapper">
         <section class="testimonials-section">
             <div class="left">
@@ -102,9 +107,10 @@
             <a href="#" class="btn light">Learn More</a>
         </section>
     </div>
-
     <!-- End Of testimonial Section -->
 
+
+    <!-- Start Of Courses Section -->
     <section class="courses-section">
         <div class="wrapper">
             <h2 class="light">Our Courses</h2>
@@ -133,9 +139,9 @@
         </div>
         <a href="#" class="btn light">All Courses</a>
     </section>
-
     <!-- End of Courses Section -->
 
+    <!-- Start Of App Section -->
     <div class="wrapper">
         <section class="app-section">
             <h2>Get Our App</h2>
@@ -154,6 +160,7 @@
     </div>
     <!-- End Of App Section -->
 
+    <!-- Start Of Footer Section -->
     <div class="wrapper">
         <div class="links-container">
             <div class="links">
@@ -194,6 +201,7 @@
         </div>
         <p class="copyright">This website is developed by GTCoding © 2021</p>
     </div>
+    <!-- End of Footer Section -->
 
 
     <script src="main.js"></script>
