--- a/index.html
+++ b/index.html
@@ -101,10 +101,14 @@
             </div>
             <div class="right">
                 <h2>What Our Students say</h2>
-                <p>All students get access to all the videos and also the source code of the projects.</p>
-                <p>You will also have access to a private Discord channel where you can discuss your doubts.</p>
+                <div class="features">
+                    <p>All students get access to all the videos and also the source code of the projects.</p>
+                    <p>You will also have access to a private Discord channel where you can discuss your doubts.</p>
+                </div>
+                <a href="#" class="btn light dekstop-btn">Learn More</a>
+
             </div>
-            <a href="#" class="btn light">Learn More</a>
+            <a href="#" class="btn light mobile-btn">Learn More</a>
         </section>
     </div>
     <!-- End Of testimonial Section -->
