Finish Styling App and Footer Section

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                     </div>
                 </div>
             </div>
-            <a href="#" class="btn light">All Courses</a>   
+            <a href="#" class="btn light">All Courses</a>
         </div>
     </section>
     <!-- End of Courses Section -->
@@ -148,61 +148,63 @@
         <section class="app-section">
             <h2>Get Our App</h2>
             <p>You can use our App for better experience on smartphones</p>
+            <div class="app-buttons">
+                <div class="app-btn">
+                    <img src="/images/appstore-icon.svg" alt="">
+                    <span>App Store</span>
+                </div>
+                <div class="app-btn">
+                    <img src="/images/googleplay-icon.svg" alt="">
+                    <span>Google Play</span>
+                </div>
+            </div>
         </section>
-        <div class="app-buttons">
-            <div class="app-btn">
-                <img src="/images/appstore-icon.svg" alt="">
-                <span>App Store</span>
-            </div>
-            <div class="app-btn">
-                <img src="/images/googleplay-icon.svg" alt="">
-                <span>Google Play</span>
-            </div>
-        </div>
     </div>
     <!-- End Of App Section -->
 
     <!-- Start Of Footer Section -->
-    <div class="wrapper">
-        <div class="links-container">
-            <div class="links">
-                <h3>Quick Links</h3>
-                <ul>
-                    <li><a href="#">About Us</a></li>
-                    <li><a href="#">Contact Us</a></li>
-                    <li><a href="#">Privacy Policy</a></li>
-                    <li><a href="#">Terms & Conditions</a></li>
-                </ul>
-            </div>
-            <div class="links">
-                <h3>Course</h3>
-                <ul>
-                    <li><a href="#">Log In</a></li>
-                    <li><a href="#">Download</a></li>
-                    <li><a href="#">All Courses</a></li>
-                </ul>
-            </div>
-            <div class="links">
-                <h3>Contact Us</h3>
-                <ul>
-                    <li>contact@email.com</li>
-                </ul>
-                <div class="social">
-                    <a href="#">
-                        <img src="/images/facebook-icon.svg" alt="">
-                    </a>
-                    <a href="#">
-                        <img src="/images/instagram-icon.svg" alt="">
-                    </a>
+    <footer>
+        <div class="wrapper">
+            <div class="links-container">
+                <div class="links">
+                    <h3>Quick Links</h3>
+                    <ul>
+                        <li><a href="#">About Us</a></li>
+                        <li><a href="#">Contact Us</a></li>
+                        <li><a href="#">Privacy Policy</a></li>
+                        <li><a href="#">Terms & Conditions</a></li>
+                    </ul>
                 </div>
-                <form action="#">
-                    <input type="text" placeholder="Email Address">
-                    <button class="submit-btn">Subscribe</button>
-                </form>
+                <div class="links">
+                    <h3>Course</h3>
+                    <ul>
+                        <li><a href="#">Log In</a></li>
+                        <li><a href="#">Download</a></li>
+                        <li><a href="#">All Courses</a></li>
+                    </ul>
+                </div>
+                <div class="links">
+                    <h3>Contact Us</h3>
+                    <ul>
+                        <li>contact@email.com</li>
+                    </ul>
+                    <div class="social">
+                        <a href="#">
+                            <img src="/images/facebook-icon.svg" alt="">
+                        </a>
+                        <a href="#">
+                            <img src="/images/instagram-icon.svg" alt="">
+                        </a>
+                    </div>
+                    <form action="#">
+                        <input type="text" placeholder="Email Address">
+                        <button class="submit-btn">Subscribe</button>
+                    </form>
+                </div>
             </div>
+            <p class="copyright">This website is developed by GTCoding © 2021</p>
         </div>
-        <p class="copyright">This website is developed by GTCoding © 2021</p>
-    </div>
+    </footer>
     <!-- End of Footer Section -->
 
 
